Fix zoom in on text input on mobile

--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -195,7 +195,7 @@ ul li {
 
     .form-container {
         position: relative;
-        top: 52px;
+        top: 32px;
         display: flex;
         flex-direction: column;
         justify-content: center;
