--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -224,7 +224,7 @@ body {
 
     .form-container {
         position: relative;
-        top: 52px;
+        top: 32px;
         display: flex;
         flex-direction: column;
         justify-content: center;
